--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <link rel="icon" type="image/png" href="images/ns-logo.png">
+    <link rel="icon" type="image/png" href="Images/ns-logo.png">
 </head>
 <body>
     <header class="header">
@@ -85,7 +85,7 @@
         </div>
 
         <div class="image-main"> 
-            <img src="images/main-image.jpeg" alt="NS Stroi" id="mainImage">
+            <img src="Images/main-image.jpeg" alt="NS Stroi" id="mainImage">
             <div class="image-text">
                 <h1>Експерти в стройтелната дейност</h1>
                 <p><strong>Изграждаме бъдещето, тухла по тухла.</strong></p>
@@ -206,7 +206,7 @@
     <footer>
         <div class="footer-content">
             <div class="for-us">
-                <img class="logo" src="images/ns-logo-white.png" alt="NS Stroi Logo">
+                <img class="logo" src="Images/ns-logo-white.png" alt="NS Stroi Logo">
                 <p>Ние в НС Строй  се  гордеем с нашия ангажимент към съвършенство във всеки проект, който предприемаме с нашият екип от опитни професионалисти. </p>
             </div>
             
