--- a/blog.html
+++ b/blog.html
@@ -4,8 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="static/css/styles.css">
+    <script>
+        function loadHTML(selector, url) {
+          fetch(url)
+            .then(response => response.text())
+            .then(data => {
+              document.querySelector(selector).innerHTML = data;
+            });
+        }
+        document.addEventListener("DOMContentLoaded", function() {
+          loadHTML("#footer", "footer.html");
+          loadHTML("#navbar-main", "navbar-main.html");
+        });
+      </script>
 </head>
 <body>
-    
+    <div id="navbar-main"></div>
+
+
+    <div id="footer"></div>
 </body>
 </html>
