--- a/footer.html
+++ b/footer.html
@@ -11,7 +11,7 @@
                 <a href=""><li>ВиК</li></a>
                 <a href=""><li>Баня</li></a>
                 <a href=""><li>Електро</li></a>
-                <a href=""><li>Външна изолоция</li></a>
+                <a href=""><li>Външна изолация</li></a>
                 <a href=""><li>Шпакловки</li></a>
             </ul>
         </div>
