--- a/services.html
+++ b/services.html
@@ -62,18 +62,17 @@
     </div>
 
     <main>
-
       <div class="our-services-main container">
         <section class="our-service-content">
             <div class="text">
                 <h2>Нашите услуги</h2>
                 <h1>Ремонтни дейности</h1>
                 <ul id="five-services">
-                  <li>ВиК</li>
-                  <li>Баня</li>
-                  <li>Електро</li>
-                  <li>Външна изолация</li>
-                  <li>Шпакловки</li>
+                  <li><img class="next-arrow" src="Images/left-arrow.png">ВиК</li>
+                  <li><img class="next-arrow" src="Images/left-arrow.png">Баня</li>
+                  <li><img class="next-arrow" src="Images/left-arrow.png">Електро</li>
+                  <li><img class="next-arrow" src="Images/left-arrow.png">Външна изолация</li>
+                  <li><img class="next-arrow" src="Images/left-arrow.png">Шпакловки</li>
                 </ul>
                 <div class="contact-button">
                     <a href="contact.html">Контакти</a>
@@ -107,30 +106,32 @@
     </div>
     <div class="site-main">
         <div class="services-section">
-            <div class="services-header">
-                <h2 class="services-title">Нашите Услуги</h2>
-                <p class="services-description">За нас е от изключително значение да предоставим най-добро обслужване и качествен строителен продукт, защото Вашите успешно реализирани проекти са нашата реклама и гаранция за качеството и професионализъм.</p>
-            </div>
             <div class="services-container">
                 <div class="service-card">
-                    <h3 class="service-card-title">Производство и преработка на дървен материал</h3>
-                    <p class="service-card-description">Предлагаме дървообработване, производство и преработка на дървен материал за строителния сектор.</p>
+                    <h3 class="service-card-title">Външна изолация</h3>
+                    <img src="Images/house.png">
+                    <p class="service-card-description">Предлагаме цялостни решения за външна изолация на сгради, включително оценка на текущото състояние, нанасяне на изолационни материали и завършителни работи. Нашият екип осигурява висока ефективност и дълготрайност, които подобряват енергийния рейтинг на вашата сграда.
+                    </p>
                 </div>
                 <div class="service-card">
-                    <h3 class="service-card-title">Услуги с багер и самосвал</h3>
-                    <p class="service-card-description">Извършваме дейности като изкопи за канали, дренажи, изчни основи, основи за огради, обратни насипи, подравняване на терени, както и подравняване, насипване и валиране.</p>
+                    <h3 class="service-card-title">Шпакловки</h3>
+                    <img src="Images/plastering.png">
+                    <p class="service-card-description">Извършваме професионални услуги по шпакловка, включително подготовка на стени и тавани, нанасяне на шпакловъчни смеси и финално изравняване на повърхности. Осигуряваме гладко и готово за боядисване или облицоване покритие.                    </p>
                 </div>
                 <div class="service-card">
-                    <h3 class="service-card-title">Електрически материали</h3>
-                    <p class="service-card-description">В нашите магазини предлагаме богат асортимент от електроматериали на водещи производители. Опитният ни персонал е на разположение, за да Ви помогне в избора на електропродукт.</p>
+                    <h3 class="service-card-title">Електро</h3>
+                    <img src="Images/electrical-energy.png">
+                    <p class="service-card-description">Нашата компания предлага професионално изпълнение на електрически инсталации, включително монтаж на осветителни системи, електрически кабели, контакти и ключове. Нашите сертифицирани електротехници осигуряват безопасни и надеждни решения за всички ваши електрически нужди.</p>
                 </div>
                 <div class="service-card">
-                    <h3 class="service-card-title">ВИК части и материали</h3>
-                    <p class="service-card-description">Разполагаме с всичко необходимо за изграждането на водопровод и канализация.</p>
+                    <h3 class="service-card-title">ВиК</h3>
+                    <img src="Images/plumbing.png">
+                    <p class="service-card-description">Специализирани сме в изграждането и поддръжката на водопроводни и канализационни системи. Нашите услуги включват инсталация на тръби, фитинги, помпи и системи за отпадни води, осигурявайки надеждност и ефективност на водоснабдителните и канализационни мрежи.</p>
                 </div>
                 <div class="service-card">
-                    <h3 class="service-card-title">Железария</h3>
-                    <p class="service-card-description">Разнообразие от инструменти и крепежни елементи ще откриете в нашите магазини със складове.</p>
+                    <h3 class="service-card-title">Баня</h3>
+                    <img src="Images/bathroom.png">
+                    <p class="service-card-description">Предлагаме пълно изпълнение на строителни и ремонтни дейности за бани, включително инсталация на санитария, плочки и монтаж на мебели. Нашият опитен екип осигурява качествени решения и внимание към детайла за създаване на функционални и естетични бани.</p>
                 </div>
             </div>
         </div>
