added responsive css

--- a/about.html
+++ b/about.html
@@ -63,21 +63,21 @@
     </div>
 
     <main>
-        <div class="about-us-main container">
+        <div class="about-us-main-container">
             <section class="about-content">
                 <div class="text">
                     <h2>Кой сме ние?</h2>
                     <h1>НС Строй</h1>
                     <p>НС Строй 2024 ЕООД е строително-ремонтна компания. 
                         Ние се гордеем с нашия ангажимент към съвършенство във всеки проект, който предприемаме. Нашият екип от опитни професионалисти работи неуморно в Плевенския регион и цяла България, за да предостави висококачествени строително-ремонтни услуги, които надхвърлят очакванията на нашите клиенти. С фокус върху иновациите, устойчивостта и вниманието към детайлите, ние се стремим да създаваме пространства, които вдъхновяват и издържат във времето.
-                        Независимо дали става въпрос за жилищен, търговски или промишлен проект, ние подхождаме към всяко начинание с всеотдайност, опит и страст към майсторството. Нашата цел е не просто да завършим даден проект, а да изградим дълготрайни взаимоотношения с нашите клиенти чрез почтеност, надеждност и превъзходни резултати. С екипа на НС Строй 2024 ЕООД можете да бъдете уверени, че вашата визия ще се превърне в реалност.
+                        Независимо дали става въпрос за жилищен, търговски или промишлен проект, ние подхождаме към всяко начинание с всеотдайност, опит и страст към майсторството.С екипа на НС Строй 2024 ЕООД можете да бъдете уверени, че вашата визия ще се превърне в реалност.
                     </p>
                     <div class="contact-button">
                         <a href="contact.html">Контакти</a>
                     </div>
                 </div>
                 <aside class="image">
-                    <img src="Images/main-image-v2.jpeg" alt="Construction image">
+                    <img src="Images/main-image-v2.jpeg" class="image-info-about" alt="Construction image">
                     <footer class="contact-info">
                         <p>Трябва ви ремонт? Свържете се с нас!</p>
                         <a class="nav-info-link" href="mailto:info@nsbuild.eu">
