--- a/footer.html
+++ b/footer.html
@@ -13,6 +13,7 @@
                 <a href=""><li>Електро</li></a>
                 <a href=""><li>Външна изолация</li></a>
                 <a href=""><li>Шпакловки</li></a>
+                <a href=""><li>Окачени тавани</li></a>
             </ul>
         </div>
         
