--- a/services.html
+++ b/services.html
@@ -73,6 +73,7 @@
                   <li><img class="next-arrow" src="Images/left-arrow.png">Електро</li>
                   <li><img class="next-arrow" src="Images/left-arrow.png">Външна изолация</li>
                   <li><img class="next-arrow" src="Images/left-arrow.png">Шпакловки</li>
+                  <li><img class="next-arrow" src="Images/left-arrow.png">Окачени тавани</li>
                 </ul>
                 <div class="contact-button">
                     <a href="contact.html">Контакти</a>
@@ -121,7 +122,7 @@
                 <div class="service-card">
                     <h3 class="service-card-title">Електро</h3>
                     <img src="Images/electrical-energy.png">
-                    <p class="service-card-description">Нашата компания предлага професионално изпълнение на електрически инсталации, включително монтаж на осветителни системи, електрически кабели, контакти и ключове. Нашите сертифицирани електротехници осигуряват безопасни и надеждни решения за всички ваши електрически нужди.</p>
+                    <p class="service-card-description">Нашата компания предлага изпълнение на електрически инсталации, включително монтаж на осветителни системи, електрически кабели, контакти и ключове. Нашите електротехници осигуряват безопасни и надеждни решения за всички ваши електрически нужди.</p>
                 </div>
                 <div class="service-card">
                     <h3 class="service-card-title">ВиК</h3>
@@ -132,6 +133,11 @@
                     <h3 class="service-card-title">Баня</h3>
                     <img src="Images/bathroom.png">
                     <p class="service-card-description">Предлагаме пълно изпълнение на строителни и ремонтни дейности за бани, включително инсталация на санитария, плочки и монтаж на мебели. Нашият опитен екип осигурява качествени решения и внимание към детайла за създаване на функционални и естетични бани.</p>
+                </div>
+                <div class="service-card">
+                    <h3 class="service-card-title">Окачени тавани</h3>
+                    <img src="Images/ceiling.png">
+                    <p class="service-card-description">Специализирани сме в изграждане на окачени тавани, като предлагаме всичко необходимо за успешното им изпълнение. От инсталиране на структурни рамки до монтаж на декоративни панели и интегрирани осветителни решения, нашият опитен екип се грижи за всеки детайл, за да осигури приятен и функционален завършек.</p>
                 </div>
             </div>
         </div>
