--- a/html/services.html
+++ b/html/services.html
@@ -80,33 +80,33 @@
             <div class="services-container">
                 <div class="service-card">
                     <h3 class="service-card-title">Външна изолация</h3>
-                    <img src="/assets/Images/common/house.png">
+                    <!-- <img src="/assets/Images/common/house.png"> -->
                     <p class="service-card-description">Предлагаме цялостни решения за външна изолация на сгради, включително оценка на текущото състояние, нанасяне на изолационни материали и завършителни работи. Нашият екип осигурява висока ефективност и дълготрайност, които подобряват енергийния рейтинг на вашата сграда.
                     </p>
                 </div>
                 <div class="service-card">
                     <h3 class="service-card-title">Шпакловки</h3>
-                    <img src="/assets/Images/common/plastering.png">
+                    <!-- <img src="/assets/Images/common/plastering.png"> -->
                     <p class="service-card-description">Извършваме професионални услуги по шпакловка, включително подготовка на стени и тавани, нанасяне на шпакловъчни смеси и финално изравняване на повърхности. Осигуряваме гладко и готово за боядисване или облицоване покритие.                    </p>
                 </div>
                 <div class="service-card">
                     <h3 class="service-card-title">Електро</h3>
-                    <img src="/assets/Images/common/electrical-energy.png">
+                    <!-- <img src="/assets/Images/common/electrical-energy.png"> -->
                     <p class="service-card-description">Нашата компания предлага изпълнение на електрически инсталации, включително монтаж на осветителни системи, електрически кабели, контакти и ключове. Нашите електротехници осигуряват безопасни и надеждни решения за всички ваши електрически нужди.</p>
                 </div>
                 <div class="service-card">
                     <h3 class="service-card-title">ВиК</h3>
-                    <img src="/assets/Images/common/plumbing.png">
+                    <!-- <img src="/assets/Images/common/plumbing.png"> -->
                     <p class="service-card-description">Специализирани сме в изграждането и поддръжката на водопроводни и канализационни системи. Нашите услуги включват инсталация на тръби, фитинги, помпи и системи за отпадни води, осигурявайки надеждност и ефективност на водоснабдителните и канализационни мрежи.</p>
                 </div>
                 <div class="service-card">
                     <h3 class="service-card-title">Баня</h3>
-                    <img src="/assets/Images/common/bathroom.png">
+                    <!-- <img src="/assets/Images/common/bathroom.png"> -->
                     <p class="service-card-description">Предлагаме пълно изпълнение на строителни и ремонтни дейности за бани, включително инсталация на санитария, плочки и монтаж на мебели. Нашият опитен екип осигурява качествени решения и внимание към детайла за създаване на функционални и естетични бани.</p>
                 </div>
                 <div class="service-card">
                     <h3 class="service-card-title">Окачени тавани</h3>
-                    <img src="/assets/Images/common/ceiling.png">
+                    <!-- <img src="/assets/Images/common/ceiling.png"> -->
                     <p class="service-card-description">Специализирани сме в изграждане на окачени тавани, като предлагаме всичко необходимо за успешното им изпълнение. От инсталиране на структурни рамки до монтаж на декоративни панели и интегрирани осветителни решения, нашият опитен екип се грижи за всеки детайл, за да осигури приятен и функционален завършек.</p>
                 </div>
             </div>
